fix: add another jupiter notebook in which chinks are downloaded manually

--- a/v2/zarr_v2.ipynb
+++ b/v2/zarr_v2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3a552590",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "83afd9fc",
    "metadata": {},
    "outputs": [
@@ -86,14 +86,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xarray.Dataset> Size: 175kB\n",
-      "Dimensions:    (latitude: 24, longitude: 12, time: 151)\n",
+      "<xarray.Dataset> Size: 1MB\n",
+      "Dimensions:    (latitude: 20, longitude: 20, time: 731)\n",
       "Coordinates:\n",
-      "  * latitude   (latitude) float32 96B 40.25 40.75 41.25 ... 50.75 51.25 51.75\n",
-      "  * longitude  (longitude) float32 48B 4.25 4.75 5.25 5.75 ... 8.75 9.25 9.75\n",
-      "  * time       (time) datetime64[ns] 1kB 1979-01-01 1979-01-02 ... 1979-05-31\n",
+      "  * latitude   (latitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * longitude  (longitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * time       (time) datetime64[ns] 6kB 1979-01-01 1979-01-02 ... 1980-12-31\n",
       "Data variables:\n",
-      "    tmax       (time, latitude, longitude) float32 174kB ...\n",
+      "    tmax       (time, latitude, longitude) float32 1MB ...\n",
       "Attributes:\n",
       "    Conventions:    CF-1.0\n",
       "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n",
@@ -106,9 +106,9 @@
     }
    ],
    "source": [
-    "lat_bounds = (40, 52)\n",
-    "lon_bounds = (4, 10)\n",
-    "time_bounds = (\"1979-01-01\", \"1979-05-31\")\n",
+    "lat_bounds = (0, 10)\n",
+    "lon_bounds = (0, 10)\n",
+    "time_bounds = (\"1979-01-01\", \"1980-12-31\")\n",
     "\n",
     "# Subset the dataset\n",
     "sliced_ds = zarr_ds.sel(\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "76dd8510",
    "metadata": {},
    "outputs": [
@@ -130,15 +130,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download and subset completed in 8.35 seconds. Speed: 0.02 MB/s\n",
-      "<xarray.Dataset> Size: 175kB\n",
-      "Dimensions:    (latitude: 24, longitude: 12, time: 151)\n",
+      "Download and subset completed in 12.77 seconds. Speed: 0.09 MB/s\n",
+      "<xarray.Dataset> Size: 1MB\n",
+      "Dimensions:    (latitude: 20, longitude: 20, time: 731)\n",
       "Coordinates:\n",
-      "  * latitude   (latitude) float32 96B 40.25 40.75 41.25 ... 50.75 51.25 51.75\n",
-      "  * longitude  (longitude) float32 48B 4.25 4.75 5.25 5.75 ... 8.75 9.25 9.75\n",
-      "  * time       (time) datetime64[ns] 1kB 1979-01-01 1979-01-02 ... 1979-05-31\n",
+      "  * latitude   (latitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * longitude  (longitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * time       (time) datetime64[ns] 6kB 1979-01-01 1979-01-02 ... 1980-12-31\n",
       "Data variables:\n",
-      "    tmax       (time, latitude, longitude) float32 174kB 15.9 nan ... 29.11\n",
+      "    tmax       (time, latitude, longitude) float32 1MB nan nan ... 28.03 30.67\n",
       "Attributes:\n",
       "    Conventions:    CF-1.0\n",
       "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n",
