--- a/v3/zarr_v3.ipynb
+++ b/v3/zarr_v3.ipynb
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download and subset completed in 4.15 seconds. Speed: 0.04 MB/s\n",
+      "Download and subset completed in 3.17 seconds. Speed: 0.05 MB/s\n",
       "<xarray.Dataset> Size: 175kB\n",
       "Dimensions:    (time: 151, latitude: 24, longitude: 12)\n",
       "Coordinates:\n",
@@ -170,9 +170,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (v3-env)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "v3-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
