feat: add notebooks for v3-hamt2 and v3-hamt3

--- a/manual/manual.ipynb
+++ b/manual/manual.ipynb
@@ -81,7 +81,7 @@
       "Fetching (requests): https://ipfs-gateway.dclimate.net/ipfs/bafkr4igzyp5ezzx6scop4jskj5376u2aotquawgjmmlzbtxhyejm6inmqy\n",
       "  -> Retrieved 3214 bytes\n",
       "\n",
-      "[requests] Total downloaded: 5217862 bytes in 11.36 s -> 0.46 MB/s\n",
+      "[requests] Total downloaded: 5217862 bytes in 8.70 s -> 0.60 MB/s\n",
       "\n"
      ]
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e5d62ba3",
    "metadata": {},
    "outputs": [
@@ -129,24 +129,24 @@
      "output_type": "stream",
      "text": [
       "=== Fetching chunks via requests in parallel ===\n",
-      "✓ bafkr4ig... -> 3214 bytes\n",
-      "✓ bafkr4id... -> 1727 bytes\n",
+      "✓ bafkr4ic... -> 232 bytes\n",
+      "✓ bafkr4ic... -> 232 bytes\n",
       "✓ bafkr4ia... -> 190 bytes\n",
-      "✓ bafkr4ic... -> 232 bytes\n",
-      "✓ bafkr4ih... -> 12596 bytes\n",
-      "✓ bafkr4ic... -> 232 bytes\n",
       "✓ bafkr4ic... -> 164 bytes\n",
+      "✓ bafkr4id... -> 1727 bytes\n",
       "✓ bafkr4ig... -> 25423 bytes\n",
+      "✓ bafkr4ih... -> 12596 bytes\n",
+      "✓ bafkr4ig... -> 3214 bytes\n",
       "✓ bafkr4ie... -> 221036 bytes\n",
-      "✓ bafyb4ih... -> 301428 bytes\n",
-      "✓ bafyb4ic... -> 511424 bytes\n",
       "✓ bafyb4ib... -> 708244 bytes\n",
       "✓ bafyb4ie... -> 879007 bytes\n",
       "✓ bafyb4ib... -> 841346 bytes\n",
+      "✓ bafyb4ih... -> 301428 bytes\n",
       "✓ bafyb4if... -> 900680 bytes\n",
+      "✓ bafyb4ic... -> 511424 bytes\n",
       "✓ bafyb4id... -> 810919 bytes\n",
       "\n",
-      "[parallel requests] Total downloaded: 5217862 bytes in 2.08 s -> 2.51 MB/s\n"
+      "[parallel requests] Total downloaded: 5217862 bytes in 1.25 s -> 4.17 MB/s\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "53f57e10",
    "metadata": {},
    "outputs": [
@@ -198,39 +198,39 @@
      "text": [
       "=== Fetching chunks via curl ===\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafkr4iceixa2nv3itpozuno26amplvxugf6bn5xhswfj35thfzjle4zk4u\n",
-      "  -> Retrieved 232 bytes in 0.57 s\n",
+      "  -> Retrieved 232 bytes in 0.62 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafkr4iaithj6biui7bqpb2pxkd3pz7p53gfnkkev44oebjeapfzq3sppvu\n",
-      "  -> Retrieved 190 bytes in 0.50 s\n",
+      "  -> Retrieved 190 bytes in 0.43 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafyb4ibnntnlje64tf3e22pgiwzytc55h2mzo56yxiq2minophnqpd5nhm\n",
-      "  -> Retrieved 708244 bytes in 1.68 s\n",
+      "  -> Retrieved 708244 bytes in 1.03 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafkr4iceixa2nv3itpozuno26amplvxugf6bn5xhswfj35thfzjle4zk4u\n",
-      "  -> Retrieved 232 bytes in 0.65 s\n",
+      "  -> Retrieved 232 bytes in 0.43 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafyb4ienc2cqtrk7s7dcffyrpfrb5f2wdiu447dltyudhhijlfvfkgfeq4\n",
-      "  -> Retrieved 879007 bytes in 2.24 s\n",
+      "  -> Retrieved 879007 bytes in 1.00 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafkr4icknftq4yxm3333uhj5cdcckdj7y4at2c6mskmgscuqd5lbswpco4\n",
-      "  -> Retrieved 164 bytes in 0.67 s\n",
+      "  -> Retrieved 164 bytes in 0.43 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafyb4ihjldd2gz6cg37i5zj53npls37zq7r3yhqdlickq5o34dhi7n2s4e\n",
-      "  -> Retrieved 301428 bytes in 1.24 s\n",
+      "  -> Retrieved 301428 bytes in 0.92 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafkr4igariesbp4vud5v47vcdlmuvc4zhempphwbdji3rnkvz4bj4tdgzy\n",
-      "  -> Retrieved 25423 bytes in 0.71 s\n",
+      "  -> Retrieved 25423 bytes in 0.57 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafkr4idtuvp3yvkbr5c7pepkwi6yqy7e3ozmejsh3chlsw7euw7rua7vpq\n",
-      "  -> Retrieved 1727 bytes in 0.59 s\n",
+      "  -> Retrieved 1727 bytes in 0.45 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafkr4ie6yrr5pa25klzqip3fyoq5vdesdvtfps7foh3pzdms5thmhcyz2m\n",
-      "  -> Retrieved 221036 bytes in 1.42 s\n",
+      "  -> Retrieved 221036 bytes in 0.91 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafyb4ifpfmiiup43czhoyatrmlo3jzu2oc4e3juhiszwdhp5uri4b3qn64\n",
-      "  -> Retrieved 900680 bytes in 2.04 s\n",
+      "  -> Retrieved 900680 bytes in 1.01 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafyb4idl6qsptuzcpw3ytedxp3q3edudqnmp6ou6p42ganckhfpdg5natm\n",
-      "  -> Retrieved 810919 bytes in 2.14 s\n",
+      "  -> Retrieved 810919 bytes in 1.03 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafkr4ihiqpk5tfc4wl3bgssqp2cj5nu5fsmo6y5lksrpo64aqemlffhtta\n",
-      "  -> Retrieved 12596 bytes in 0.78 s\n",
+      "  -> Retrieved 12596 bytes in 0.54 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafyb4ibd3msajqpikjfhsap64eprlok7g55mxrol3kloh5bzyj4lre6qiu\n",
-      "  -> Retrieved 841346 bytes in 1.83 s\n",
+      "  -> Retrieved 841346 bytes in 1.01 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafyb4icclyf6s5mj2y5twk5jpunujyulamvr2sm26ok7rgw4mj5s55f5va\n",
-      "  -> Retrieved 511424 bytes in 1.52 s\n",
+      "  -> Retrieved 511424 bytes in 1.32 s\n",
       "Curl fetching: https://ipfs-gateway.dclimate.net/ipfs/bafkr4igzyp5ezzx6scop4jskj5376u2aotquawgjmmlzbtxhyejm6inmqy\n",
-      "  -> Retrieved 3214 bytes in 0.60 s\n",
+      "  -> Retrieved 3214 bytes in 0.44 s\n",
       "\n",
-      "[curl] Total downloaded: 5217862 bytes in 19.19 s -> 0.27 MB/s\n",
+      "[curl] Total downloaded: 5217862 bytes in 12.14 s -> 0.43 MB/s\n",
       "\n"
      ]
     }
@@ -273,9 +273,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (manual-env)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "manual-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
