--- a/zarr_v2/zarr_v2.ipynb
+++ b/zarr_v2/zarr_v2.ipynb
@@ -1,26 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "08c3e6f4",
-   "metadata": {},
-   "source": [
-    "To execute this notebook:\n",
-    "\n",
-    "1. Install dependencies\n",
-    "`pdm install`\n",
-    "\n",
-    "2. Create a kernel\n",
-    "`pdm run python -m ipykernel install --user --name v3-env --display-name \"Python (v3-env)\"`\n",
-    "\n",
-    "3. Set the kernel of this notebook on the newly created `v3-env`\n",
-    "\n",
-    "4. Execute"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3a552590",
    "metadata": {},
    "outputs": [
@@ -28,22 +10,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xarray.Dataset> Size: 18GB\n",
-      "Dimensions:    (time: 16900, latitude: 360, longitude: 720)\n",
+      "<xarray.Dataset> Size: 758MB\n",
+      "Dimensions:    (latitude: 360, longitude: 720, time: 731)\n",
       "Coordinates:\n",
-      "  * time       (time) datetime64[ns] 135kB 1979-01-01 1979-01-02 ... 2025-04-08\n",
       "  * latitude   (latitude) float32 1kB -89.75 -89.25 -88.75 ... 88.75 89.25 89.75\n",
       "  * longitude  (longitude) float32 3kB -179.8 -179.2 -178.8 ... 179.2 179.8\n",
+      "  * time       (time) datetime64[ns] 6kB 1979-01-01 1979-01-02 ... 1980-12-31\n",
       "Data variables:\n",
-      "    tmax       (time, latitude, longitude) float32 18GB ...\n",
+      "    tmax       (time, latitude, longitude) float32 758MB ...\n",
       "Attributes:\n",
       "    Conventions:    CF-1.0\n",
-      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
       "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n",
-      "    version:        V1.0\n",
-      "    title:          CPC GLOBAL TEMP V1.0\n",
+      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
       "    dataset_title:  CPC GLOBAL TEMP\n",
-      "    history:        Updated 2025-04-09 15:37:46\n"
+      "    history:        created 9/2016 by CAS NOAA/ESRL PSD\n",
+      "    title:          CPC GLOBAL TEMP V1.0\n",
+      "    version:        V1.0\n"
      ]
     }
    ],
@@ -52,10 +34,10 @@
     "\n",
     "import xarray as xr\n",
     "from multiformats import CID\n",
-    "from py_hamt import HAMT, IPFSStore, IPFSZarr3\n",
+    "from py_hamt import HAMT, IPFSStore\n",
     "from xarray import Dataset\n",
     "\n",
-    "ipns_hash = \"bafyr4idlv44ryi65tm6kejtpze3niotafgt2p6jfedlld5yotqo3ekkn3u\"\n",
+    "ipns_hash = \"bafyr4iceke6zmxqvvil4okumfde4pm4exrcqqp4x4qlh2ddlwo4cdxclb4\"\n",
     "\n",
     "# Initialize IPFSStore with a public IPFS gateway\n",
     "ipfs_store = IPFSStore(gateway_uri_stem=\"https://ipfs-gateway.dclimate.net/\", timeout_seconds=120)\n",
@@ -66,11 +48,8 @@
     "# Create HAMT instance using the IPFSStore\n",
     "hamt = HAMT(store=ipfs_store, root_node_id=root_cid)\n",
     "\n",
-    "# Wrap the HAMT instance with IPFSZarr3\n",
-    "zarr_store = IPFSZarr3(hamt, read_only=True)\n",
-    "\n",
     "# Open the dataset with xarray\n",
-    "zarr_ds: Dataset = xr.open_zarr(store=zarr_store, zarr_format=3)\n",
+    "zarr_ds: Dataset = xr.open_zarr(store=hamt)\n",
     "\n",
     "# Sort the dataset by latitude and longitude\n",
     "zarr_ds = zarr_ds.sortby(\"longitude\")\n",
@@ -81,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "83afd9fc",
    "metadata": {},
    "outputs": [
@@ -89,29 +68,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xarray.Dataset> Size: 175kB\n",
-      "Dimensions:    (time: 151, latitude: 24, longitude: 12)\n",
+      "<xarray.Dataset> Size: 1MB\n",
+      "Dimensions:    (latitude: 20, longitude: 20, time: 731)\n",
       "Coordinates:\n",
-      "  * time       (time) datetime64[ns] 1kB 1979-01-01 1979-01-02 ... 1979-05-31\n",
-      "  * latitude   (latitude) float32 96B 40.25 40.75 41.25 ... 50.75 51.25 51.75\n",
-      "  * longitude  (longitude) float32 48B 4.25 4.75 5.25 5.75 ... 8.75 9.25 9.75\n",
+      "  * latitude   (latitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * longitude  (longitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * time       (time) datetime64[ns] 6kB 1979-01-01 1979-01-02 ... 1980-12-31\n",
       "Data variables:\n",
-      "    tmax       (time, latitude, longitude) float32 174kB ...\n",
+      "    tmax       (time, latitude, longitude) float32 1MB ...\n",
       "Attributes:\n",
       "    Conventions:    CF-1.0\n",
-      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
       "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n",
-      "    version:        V1.0\n",
-      "    title:          CPC GLOBAL TEMP V1.0\n",
+      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
       "    dataset_title:  CPC GLOBAL TEMP\n",
-      "    history:        Updated 2025-04-09 15:37:46\n"
+      "    history:        created 9/2016 by CAS NOAA/ESRL PSD\n",
+      "    title:          CPC GLOBAL TEMP V1.0\n",
+      "    version:        V1.0\n"
      ]
     }
    ],
    "source": [
-    "lat_bounds = (40, 52)\n",
-    "lon_bounds = (4, 10)\n",
-    "time_bounds = (\"1979-01-01\", \"1979-05-31\")\n",
+    "lat_bounds = (0, 10)\n",
+    "lon_bounds = (0, 10)\n",
+    "time_bounds = (\"1979-01-01\", \"1980-12-31\")\n",
     "\n",
     "# Subset the dataset\n",
     "sliced_ds = zarr_ds.sel(\n",
@@ -125,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "76dd8510",
    "metadata": {},
    "outputs": [
@@ -133,23 +112,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download and subset completed in 3.17 seconds. Speed: 0.05 MB/s\n",
-      "<xarray.Dataset> Size: 175kB\n",
-      "Dimensions:    (time: 151, latitude: 24, longitude: 12)\n",
+      "Download and subset completed in 8.45 seconds. Speed: 0.13 MB/s\n",
+      "<xarray.Dataset> Size: 1MB\n",
+      "Dimensions:    (latitude: 20, longitude: 20, time: 731)\n",
       "Coordinates:\n",
-      "  * time       (time) datetime64[ns] 1kB 1979-01-01 1979-01-02 ... 1979-05-31\n",
-      "  * latitude   (latitude) float32 96B 40.25 40.75 41.25 ... 50.75 51.25 51.75\n",
-      "  * longitude  (longitude) float32 48B 4.25 4.75 5.25 5.75 ... 8.75 9.25 9.75\n",
+      "  * latitude   (latitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * longitude  (longitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * time       (time) datetime64[ns] 6kB 1979-01-01 1979-01-02 ... 1980-12-31\n",
       "Data variables:\n",
-      "    tmax       (time, latitude, longitude) float32 174kB 15.9 nan ... 29.11\n",
+      "    tmax       (time, latitude, longitude) float32 1MB nan nan ... 28.03 30.67\n",
       "Attributes:\n",
       "    Conventions:    CF-1.0\n",
-      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
       "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n",
-      "    version:        V1.0\n",
-      "    title:          CPC GLOBAL TEMP V1.0\n",
+      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
       "    dataset_title:  CPC GLOBAL TEMP\n",
-      "    history:        Updated 2025-04-09 15:37:46\n"
+      "    history:        created 9/2016 by CAS NOAA/ESRL PSD\n",
+      "    title:          CPC GLOBAL TEMP V1.0\n",
+      "    version:        V1.0\n"
      ]
     }
    ],
@@ -184,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
