--- a/zarr_v3_hamt_v2/zarr_v3.ipynb
+++ b/zarr_v3_hamt_v2/zarr_v3.ipynb
@@ -1,26 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "6942cad7",
-   "metadata": {},
-   "source": [
-    "To execute this notebook:\n",
-    "\n",
-    "1. Install dependencies\n",
-    "`pdm install`\n",
-    "\n",
-    "2. Create a kernel\n",
-    "`pdm run python -m ipykernel install --user --name v2-env --display-name \"Python (v2-env)\"`\n",
-    "\n",
-    "3. Set the kernel of this notebook on the newly created `v2-env`\n",
-    "\n",
-    "4. Execute"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "3a552590",
    "metadata": {},
    "outputs": [
@@ -29,21 +11,21 @@
      "output_type": "stream",
      "text": [
       "<xarray.Dataset> Size: 758MB\n",
-      "Dimensions:    (latitude: 360, longitude: 720, time: 731)\n",
+      "Dimensions:    (latitude: 360, time: 731, longitude: 720)\n",
       "Coordinates:\n",
       "  * latitude   (latitude) float32 1kB -89.75 -89.25 -88.75 ... 88.75 89.25 89.75\n",
-      "  * longitude  (longitude) float32 3kB -179.8 -179.2 -178.8 ... 179.2 179.8\n",
       "  * time       (time) datetime64[ns] 6kB 1979-01-01 1979-01-02 ... 1980-12-31\n",
+      "  * longitude  (longitude) float32 3kB -179.8 -179.2 -178.8 ... 179.2 179.8\n",
       "Data variables:\n",
       "    tmax       (time, latitude, longitude) float32 758MB ...\n",
       "Attributes:\n",
       "    Conventions:    CF-1.0\n",
-      "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n",
-      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
-      "    dataset_title:  CPC GLOBAL TEMP\n",
+      "    version:        V1.0\n",
       "    history:        created 9/2016 by CAS NOAA/ESRL PSD\n",
       "    title:          CPC GLOBAL TEMP V1.0\n",
-      "    version:        V1.0\n"
+      "    dataset_title:  CPC GLOBAL TEMP\n",
+      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
+      "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n"
      ]
     }
    ],
@@ -52,13 +34,13 @@
     "\n",
     "import xarray as xr\n",
     "from multiformats import CID\n",
-    "from py_hamt import HAMT, IPFSStore\n",
+    "from py_hamt import HAMT, IPFSStore, IPFSZarr3\n",
     "from xarray import Dataset\n",
     "\n",
-    "ipns_hash = \"bafyr4iceke6zmxqvvil4okumfde4pm4exrcqqp4x4qlh2ddlwo4cdxclb4\"\n",
+    "ipns_hash = \"bafyr4igb6vraglzk2v4dkysyvnc5xjrwbsvn5xw3o5n4jp5jhhqyexha54\"\n",
     "\n",
     "# Initialize IPFSStore with a public IPFS gateway\n",
-    "ipfs_store = IPFSStore(gateway_uri_stem=\"https://ipfs-gateway.dclimate.net/\", timeout_seconds=120)\n",
+    "ipfs_store = IPFSStore(gateway_uri_stem=\"http://127.0.0.1:8080/\", timeout_seconds=120)\n",
     "\n",
     "# Decode the root CID for the Zarr dataset\n",
     "root_cid = CID.decode(ipns_hash)\n",
@@ -66,8 +48,11 @@
     "# Create HAMT instance using the IPFSStore\n",
     "hamt = HAMT(store=ipfs_store, root_node_id=root_cid)\n",
     "\n",
+    "# Wrap the HAMT instance with IPFSZarr3\n",
+    "zarr_store = IPFSZarr3(hamt, read_only=True)\n",
+    "\n",
     "# Open the dataset with xarray\n",
-    "zarr_ds: Dataset = xr.open_zarr(store=hamt)\n",
+    "zarr_ds: Dataset = xr.open_zarr(store=zarr_store, zarr_format=3)\n",
     "\n",
     "# Sort the dataset by latitude and longitude\n",
     "zarr_ds = zarr_ds.sortby(\"longitude\")\n",
@@ -78,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "83afd9fc",
    "metadata": {},
    "outputs": [
@@ -86,28 +71,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<xarray.Dataset> Size: 1MB\n",
-      "Dimensions:    (latitude: 20, longitude: 20, time: 731)\n",
+      "<xarray.Dataset> Size: 95MB\n",
+      "Dimensions:    (latitude: 180, time: 731, longitude: 180)\n",
       "Coordinates:\n",
-      "  * latitude   (latitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
-      "  * longitude  (longitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * latitude   (latitude) float32 720B 0.25 0.75 1.25 1.75 ... 88.75 89.25 89.75\n",
       "  * time       (time) datetime64[ns] 6kB 1979-01-01 1979-01-02 ... 1980-12-31\n",
+      "  * longitude  (longitude) float32 720B 0.25 0.75 1.25 ... 88.75 89.25 89.75\n",
       "Data variables:\n",
-      "    tmax       (time, latitude, longitude) float32 1MB ...\n",
+      "    tmax       (time, latitude, longitude) float32 95MB ...\n",
       "Attributes:\n",
       "    Conventions:    CF-1.0\n",
-      "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n",
-      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
-      "    dataset_title:  CPC GLOBAL TEMP\n",
+      "    version:        V1.0\n",
       "    history:        created 9/2016 by CAS NOAA/ESRL PSD\n",
       "    title:          CPC GLOBAL TEMP V1.0\n",
-      "    version:        V1.0\n"
+      "    dataset_title:  CPC GLOBAL TEMP\n",
+      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
+      "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n"
      ]
     }
    ],
    "source": [
-    "lat_bounds = (0, 10)\n",
-    "lon_bounds = (0, 10)\n",
+    "lat_bounds = (0, 92)\n",
+    "lon_bounds = (0, 90)\n",
     "time_bounds = (\"1979-01-01\", \"1980-12-31\")\n",
     "\n",
     "# Subset the dataset\n",
@@ -122,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "76dd8510",
    "metadata": {},
    "outputs": [
@@ -130,23 +115,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Download and subset completed in 12.77 seconds. Speed: 0.09 MB/s\n",
-      "<xarray.Dataset> Size: 1MB\n",
-      "Dimensions:    (latitude: 20, longitude: 20, time: 731)\n",
+      "Download and subset completed in 671.12 seconds. Speed: 0.13 MB/s\n",
+      "<xarray.Dataset> Size: 95MB\n",
+      "Dimensions:    (latitude: 180, time: 731, longitude: 180)\n",
       "Coordinates:\n",
-      "  * latitude   (latitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
-      "  * longitude  (longitude) float32 80B 0.25 0.75 1.25 1.75 ... 8.75 9.25 9.75\n",
+      "  * latitude   (latitude) float32 720B 0.25 0.75 1.25 1.75 ... 88.75 89.25 89.75\n",
       "  * time       (time) datetime64[ns] 6kB 1979-01-01 1979-01-02 ... 1980-12-31\n",
+      "  * longitude  (longitude) float32 720B 0.25 0.75 1.25 ... 88.75 89.25 89.75\n",
       "Data variables:\n",
-      "    tmax       (time, latitude, longitude) float32 1MB nan nan ... 28.03 30.67\n",
+      "    tmax       (time, latitude, longitude) float32 95MB nan nan nan ... nan nan\n",
       "Attributes:\n",
       "    Conventions:    CF-1.0\n",
-      "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n",
-      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
-      "    dataset_title:  CPC GLOBAL TEMP\n",
+      "    version:        V1.0\n",
       "    history:        created 9/2016 by CAS NOAA/ESRL PSD\n",
       "    title:          CPC GLOBAL TEMP V1.0\n",
-      "    version:        V1.0\n"
+      "    dataset_title:  CPC GLOBAL TEMP\n",
+      "    Source:         ftp://ftp.cpc.ncep.noaa.gov/precip/wd52ws/global_temp/\n",
+      "    References:     https://www.psl.noaa.gov/data/gridded/data.cpc.globaltemp...\n"
      ]
     }
    ],
@@ -167,9 +152,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (v2-env)",
+   "display_name": ".venv",
    "language": "python",
-   "name": "v2-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -181,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
